# ros2_ur5e

./: .gitignore  README.md
CAD_Ur5e/: drive.prt.1  motherboard.prt.2  ur05.asm.1  ur05__out.log.1  ur05_part1.prt.1  ur05_part10.prt.1  ur05_part11.prt.1  ur05_part12.prt.1  ur05_part13.prt.1  ur05_part14.prt.1  ur05_part15.prt.1  ur05_part16.prt.1  ur05_part17.prt.1  ur05_part2.prt.1  ur05_part3.prt.1  ur05_part4.prt.1  ur05_part5.prt.1  ur05_part6.prt.1  ur05_part7.prt.1  ur05_part8.prt.1  ur05_part9.prt.1
src/custom_ur5e_tool/: CMakeLists.txt  package.xml
src/custom_ur5e_tool/config/: moveit_joint_limits.yaml  ompl_planning.yaml
src/custom_ur5e_tool/launch/: ur5e_lab_moveit_gazebo.launch.py
src/custom_ur5e_tool/rviz/: screwdriver_config.rviz
src/custom_ur5e_tool/script/: movit_py
src/custom_ur5e_tool/srdf/: ur5e_screwdriver.srdf.xacro
src/custom_ur5e_tool/urdf/: motherboard.urdf.xacro  ur5e_screwdriver.urdf.xacro
src/custom_ur5e_tool/worlds/: lab_room.world  warehouse_env.world
src/custom_ur5e_tool/worlds/w1/: model.config  model.sdf
